_cache/v0.18.1/curl/specs.md
---
title: "curl"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["7.83.0"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"root": 6, "radiuss": 1, "e4s": 1, "data-vis-sdk": 1, "tutorial": 1, "aws-isc": 2, "aws-isc-aarch64": 2, "build_systems": 1}}
spec_details: [{"hash": "7fafhivu3l77xdzqfd3phns7imcogwtn", "compiler": "gcc@=7.5.0", "versions": ["7.83.0"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~gssapi", "~ldap", "~libidn2", "~librtmp", "libs=shared,static", "~libssh", "~libssh2", "~nghttp2", "tls=openssl"], "stacks": ["root", "radiuss", "e4s", "data-vis-sdk", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/curl-7.83.0/linux-ubuntu18.04-x86_64-gcc-7.5.0-curl-7.83.0-7fafhivu3l77xdzqfd3phns7imcogwtn.spack"}, {"hash": "erwm3cs5v5mqcpwbxupma7lppamimjxb", "compiler": "gcc@=7.3.1", "versions": ["7.83.0"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["~gssapi", "~ldap", "~libidn2", "~librtmp", "libs=shared,static", "~libssh", "~libssh2", "~nghttp2", "tls=openssl"], "stacks": ["root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/curl-7.83.0/linux-amzn2-x86_64_v3-gcc-7.3.1-curl-7.83.0-erwm3cs5v5mqcpwbxupma7lppamimjxb.spack"}, {"hash": "f6aqfzqoojz4guzubyf3iggsroz75eld", "compiler": "gcc@=7.3.1", "versions": ["7.83.0"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["~gssapi", "~ldap", "~libidn2", "~librtmp", "libs=shared,static", "~libssh", "~libssh2", "~nghttp2", "tls=openssl"], "stacks": ["root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/curl-7.83.0/linux-amzn2-x86_64_v4-gcc-7.3.1-curl-7.83.0-f6aqfzqoojz4guzubyf3iggsroz75eld.spack"}, {"hash": "olutczgvs5kuwpiy5stepxjh6ebdmwss", "compiler": "gcc@=7.3.1", "versions": ["7.83.0"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["~gssapi", "~ldap", "~libidn2", "~librtmp", "libs=shared,static", "~libssh", "~libssh2", "~nghttp2", "tls=openssl"], "stacks": ["aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/curl-7.83.0/linux-amzn2-aarch64-gcc-7.3.1-curl-7.83.0-olutczgvs5kuwpiy5stepxjh6ebdmwss.spack"}, {"hash": "23xgyjterllhwi6ldqrioev5jhopfkiw", "compiler": "gcc@=7.3.1", "versions": ["7.83.0"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["~gssapi", "~ldap", "~libidn2", "~librtmp", "libs=shared,static", "~libssh", "~libssh2", "~nghttp2", "tls=openssl"], "stacks": ["aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/curl-7.83.0/linux-amzn2-graviton2-gcc-7.3.1-curl-7.83.0-23xgyjterllhwi6ldqrioev5jhopfkiw.spack"}, {"hash": "lp5kweq537ntscc3pvus2i7zw4vp2atr", "compiler": "gcc@=7.5.0", "versions": ["7.83.0"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~gssapi", "~ldap", "+libidn2", "~librtmp", "libs=shared,static", "~libssh", "~libssh2", "~nghttp2", "tls=openssl"], "stacks": ["root", "build_systems"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/curl-7.83.0/linux-ubuntu18.04-x86_64-gcc-7.5.0-curl-7.83.0-lp5kweq537ntscc3pvus2i7zw4vp2atr.spack"}]
---